--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "vue": "^2.3.3",
     "vuex": "^2.5.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.5.1",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^4.16.3",
+    "webpack-dev-server": "^3.1.5"
   }
 }
